# AZ5

./: .gitignore  .gitmodules  README.md
CODE/ros/controller/src/controller/: CMakeLists.txt  setup.py
CODE/ros/controller/src/controller/launch/: pollotron.launch
CODE/ros/controller/src/controller/msg/: buttons.msg  raw_controller.msg  ultrasounds.msg
CODE/ros/controller/src/controller/scripts/: _ros_pub.py  _ros_sub.py  controller_reader  pollotron  pollotron_controller  robot_monitor  sounds  us_filter  webpage_controller
CODE/ros/controller/src/controller/src/controller_reader/: axis.py  filter.py  joystick.py  main.py  ps3Keys.py  sender.py
CODE/ros/controller/src/controller/src/pollotron/: main.py  sender.py
CODE/ros/controller/src/controller/src/pollotron_controller/: main.py
CODE/ros/controller/src/controller/src/robot_monitor/: main.py
CODE/ros/controller/src/controller/src/sounds/: main.py
CODE/ros/controller/src/controller/src/us_filter/: filter.py  main.py
CODE/ros/controller/src/controller/src/webpage_controller/: main.py
CODE/ros/pollotron/src/az5/: CMakeLists.txt  setup.py
CODE/ros/pollotron/src/az5/launch/: matlab_pollotron.launch  navigation_test.launch  odom_test.launch  pollotron.launch
CODE/ros/pollotron/src/az5/maps/: slam_map.yaml  slam_map1.yaml
CODE/ros/pollotron/src/az5/msg/: motor_state.msg  simple_vel.msg
CODE/ros/pollotron/src/az5/navigation_map/: base_local_planner_params.yml  costmap_common_params.yml  global_costmap_params.yml  local_costmap_params.yml  txt.txt
CODE/ros/pollotron/src/az5/scripts/: local_planner  person_tracker  pollotron  slam_map  sounds  us_filter
CODE/ros/pollotron/src/az5/src/filters/: disperse_filter.py
CODE/ros/pollotron/src/az5/src/laser_filter/: main.py
CODE/ros/pollotron/src/az5/src/laser_point_cloud/: main.cc
CODE/ros/pollotron/src/az5/src/motor_replayer/: main.py
CODE/ros/pollotron/src/az5/src/odometry_reciver/: main.cc
CODE/ros/pollotron/src/az5/src/odometry_sender/: main.cc
CODE/ros/pollotron/src/az5/src/person_tracker/: color_matcher.py  faces.py  fast_yolo.py  main.py  markov_filter.py  movement.py  movement_manager.py  pose.py  setup.sh  sort.py  text_recognition.py  tracker.py  yolo.py
CODE/ros/pollotron/src/az5/src/person_tracker/env/: pip-selfcheck.json
CODE/ros/pollotron/src/az5/src/safety_distance/: main.cc
CODE/ros/pollotron/src/az5/src/slam_map/: main.py
CODE/ros/pollotron/src/az5/src/sounds/: main.py
CODE/ros/pollotron/src/az5_model/: CMakeLists.txt  package.xml
CODE/ros/pollotron/src/az5_model/launch/: view_complete.launch  view_movement.launch  view_urdf.launch
CODE/ros/pollotron/src/az5_model/rviz/: config.rviz  robot_config.rviz  robot_config_complete.rviz
CODE/ros/pollotron/src/az5_model/src/movements/: fake_movement.cpp  robot_still.cpp
CODE/ros/pollotron/src/az5_model/urdf/: robot.urdf
(+1099 files in other folders)
